--- a/views/partials/emojilist.handlebars
+++ b/views/partials/emojilist.handlebars
@@ -1,42 +1,42 @@
-<div class="emoji">🍬</div>
-<div class="emoji">🍭</div>
-<div class="emoji">🍡</div>
-<div class="emoji">🍩</div>
-<div class="emoji">🍪</div>
-<div class="emoji">🍫</div>
-<div class="emoji">🎂</div>
-<div class="emoji">🍯</div>
-<div class="emoji">🍎</div>
-<div class="emoji">🍑</div>
-<div class="emoji">🍌</div>
-<div class="emoji">🍓</div>
-<div class="emoji">🍇</div>
-<div class="emoji">🍉</div>
-<div class="emoji">🐝</div>
-<div class="emoji">😊</div>
-<div class="emoji">🙃</div>
-<div class="emoji">😍</div>
-<div class="emoji">😂</div>
-<div class="emoji">😭</div>
-<div class="emoji">😬</div>
-<div class="emoji">😆</div>
-<div class="emoji">😩</div>
-<div class="emoji">😩</div>
-<div class="emoji">😱</div>
-<div class="emoji">😒</div>
-<div class="emoji">🖖</div>
-<div class="emoji">🙌</div>
-<div class="emoji">👏</div>
-<div class="emoji">👌</div>
-<div class="emoji">💪</div>
-<div class="emoji">🤦</div>
-<div class="emoji">🌱</div>
-<div class="emoji">🌞</div>
-<div class="emoji">🌝</div>
-<div class="emoji">❤️</div>
-<div class="emoji">💕</div>
-<div class="emoji">💖</div>
-<div class="emoji">🔥</div>
-<div class="emoji">🎉</div>
-<div class="emoji">💯</div>
-<div class="emoji">🏳️‍🌈</div>
+<button type="button" class="add-emoji">🍬</button>
+<button type="button" class="add-emoji">🍭</button>
+<button type="button" class="add-emoji">🍡</button>
+<button type="button" class="add-emoji">🍩</button>
+<button type="button" class="add-emoji">🍪</button>
+<button type="button" class="add-emoji">🍫</button>
+<button type="button" class="add-emoji">🎂</button>
+<button type="button" class="add-emoji">🍯</button>
+<button type="button" class="add-emoji">🍎</button>
+<button type="button" class="add-emoji">🍑</button>
+<button type="button" class="add-emoji">🍌</button>
+<button type="button" class="add-emoji">🍓</button>
+<button type="button" class="add-emoji">🍇</button>
+<button type="button" class="add-emoji">🍉</button>
+<button type="button" class="add-emoji">🐝</button>
+<button type="button" class="add-emoji">😊</button>
+<button type="button" class="add-emoji">🙃</button>
+<button type="button" class="add-emoji">😍</button>
+<button type="button" class="add-emoji">😂</button>
+<button type="button" class="add-emoji">😭</button>
+<button type="button" class="add-emoji">😬</button>
+<button type="button" class="add-emoji">😆</button>
+<button type="button" class="add-emoji">😩</button>
+<button type="button" class="add-emoji">😩</button>
+<button type="button" class="add-emoji">😱</button>
+<button type="button" class="add-emoji">😒</button>
+<button type="button" class="add-emoji">🖖</button>
+<button type="button" class="add-emoji">🙌</button>
+<button type="button" class="add-emoji">👏</button>
+<button type="button" class="add-emoji">👌</button>
+<button type="button" class="add-emoji">💪</button>
+<button type="button" class="add-emoji">🤦</button>
+<button type="button" class="add-emoji">🌱</button>
+<button type="button" class="add-emoji">🌞</button>
+<button type="button" class="add-emoji">🌝</button>
+<button type="button" class="add-emoji">❤️</button>
+<button type="button" class="add-emoji">💕</button>
+<button type="button" class="add-emoji">💖</button>
+<button type="button" class="add-emoji">🔥</button>
+<button type="button" class="add-emoji">🎉</button>
+<button type="button" class="add-emoji">💯</button>
+<button type="button" class="add-emoji">🏳️‍🌈</button>
