--- a/views/partials/newreplyform.handlebars
+++ b/views/partials/newreplyform.handlebars
@@ -1,6 +1,6 @@
 <div class="replyForm">
   <div class="form-row">
-    <textarea class="form-control form-control-sm comment-textarea" id="commentContent" name="commentContent" style="resize: none;" placeholder="Write a comment." maxlength="9000"></textarea>
+    <textarea class="form-control form-control-sm comment-textarea editable-text editable-comment-content" id="commentContent" name="commentContent" style="resize: none;" placeholder="Write a comment." maxlength="9000"></textarea>
   </div>
   <div class="form-row my-2 card p-1 replyEmojiWindow" style="display:none">
     {{> emojilist }}
