Should be clear that you can put >1 line of text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -847,7 +847,7 @@ hr {
 }
 
 .medium-editor-element {
-  min-height: 40px !important;
+  min-height: 60pt !important;
 }
 .medium-editor-placeholder::after {
   font-style: normal !important;
