Adjusted margin in new post form

--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -22,7 +22,7 @@
   <div class="form-row my-2 card p-1" id="emojiWindow" style="display:none">
     {{> emojilist }}
   </div>
-    <div id="topPostControlsRow" class="form-row mt-2 post-controls">
+    <div id="topPostControlsRow" class="form-row post-controls">
     </div>
     <div id="bottomPostControlsRow" class="form-row mt-2 post-controls">
       {{! Hide this div in communities}}
