--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -1,19 +1,21 @@
+{{#if isOwnProfile}}
 <div class="row mb-3">
   <div class="col-6 d-flex">
-    <div id="profileImageContainer">
+{{/if}}
+    <div id="profileImageContainer" class="{{#if isOwnProfile}}own-profile-image{{/if}}">
       <img alt="Profile image for the user @{{ profileData.username}}" id="profileImage" src="{{#if profileData.imageEnabled}}/images/{{profileData.image}}{{else}}/images/cake.svg{{/if}}" />
     </div>
+{{#if isOwnProfile}}
   </div>
   <div class="col-6 d-flex align-items-start">
-    {{#if isOwnProfile}}
-      <div class="btn-group-vertical w-100" role="group" aria-label="Profile control buttons" id="profileControlsDesktopMobile">
-        <button type="button" class="btn btn-outline-secondary" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-pencil-alt"></i> Edit</button>
-        <a href="/settings" class="btn btn-outline-secondary"><i class="fas fa-cog"></i> Settings</a>
-        <a href="/logout" class="btn btn-outline-secondary"><i class="fas fa-sign-out-alt"></i> Log out</a>
-      </div>
-    {{/if}}
+    <div class="btn-group-vertical w-100" role="group" aria-label="Profile control buttons" id="profileControlsDesktopMobile">
+      <button type="button" class="btn btn-outline-secondary" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-pencil-alt"></i> Edit</button>
+      <a href="/settings" class="btn btn-outline-secondary"><i class="fas fa-cog"></i> Settings</a>
+      <a href="/logout" class="btn btn-outline-secondary"><i class="fas fa-sign-out-alt"></i> Log out</a>
+    </div>
   </div>
 </div>
+{{/if}}
 
 <h3 class="page-header">
   {{#if profileData.displayName }}
