Fixed a bug with flags not appearing in posts

--- a/views/partials/posts.handlebars
+++ b/views/partials/posts.handlebars
@@ -42,7 +42,7 @@
                   <div class="author-username">
                     <strong><a class="authorLink" href="/{{this.author.username}}">@{{this.author.username}}</a></strong>
                   </div>
-                {{/if}} {{#contains ../../flaggedUsers this.author.email}}<i class="fas fa-exclamation-triangle text-danger user-flag"></i>{{/contains}}
+                {{/if}} {{#contains ../flaggedUsers this.author.email}}<i class="fas fa-exclamation-triangle text-danger user-flag"></i>{{/contains}}
               </div>
               <div class="post-header-row-2">
                 <div class="post-timestamp-privacy">
@@ -212,7 +212,7 @@
                     <div class="author-username">
                       <strong><a class="authorLink" href="/{{this.author.username}}">@{{this.author.username}}</a></strong>
                     </div>
-                  {{/if}} {{#contains ../../flaggedUsers this.author.email}}<i class="fas fa-exclamation-triangle text-danger user-flag"></i>{{/contains}}
+                  {{/if}} {{#contains ../flaggedUsers this.author.email}}<i class="fas fa-exclamation-triangle text-danger user-flag"></i>{{/contains}}
                 </div>
                 <div class="post-header-row-2">
                   <div class="post-timestamp-privacy">
@@ -376,7 +376,7 @@
                       <div class="author-username">
                         <strong><a class="authorLink" href="/{{this.author.username}}">@{{this.author.username}}</a></strong>
                       </div>
-                    {{/if}} {{#contains ../../flaggedUsers this.author.email}}<i class="fas fa-exclamation-triangle text-danger user-flag"></i>{{/contains}}
+                    {{/if}} {{#contains ../flaggedUsers this.author.email}}<i class="fas fa-exclamation-triangle text-danger user-flag"></i>{{/contains}}
                   </div>
                   <div class="post-header-row-2">
                     <div class="post-timestamp-privacy">
