--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -40,7 +40,7 @@
                       <div class="author-username">
                         <strong><a class="authorLink" href="/{{this.author.username}}">@{{post.author.username}}</a></strong>
                       </div>
-                    {{/if}} {{#contains ../flaggedUsers post.author.email}}<i class="fas fa-exclamation-triangle text-danger user-flag"></i>{{/contains}}
+                    {{/if}} {{#contains flaggedUsers post.author.email}}<i class="fas fa-exclamation-triangle text-danger user-flag"></i>{{/contains}}
                   </div>
                   <div class="post-header-row-2">
                     <div class="post-timestamp-privacy">
