--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -11,7 +11,7 @@
     <input type="hidden" id="postImageTags" name="postImageTags"/>
     <div class="custom-file-container" data-upload-id="postImageUpload">
     <label style="display:none" class="custom-file-container__custom-file" >
-      <input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose File" name="postImage">
+      <input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose File" name="postImage" multiple>
       <input type="hidden" name="MAX_FILE_SIZE" value="10485760" />
       <span class="file-control"></span>
     </label>
