--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -9,15 +9,18 @@
   <div class="form-row mb-2" id="imagePreviewContainer">
     <input type="hidden" id="postImageUrl" name="postImageUrl"/>
     <input type="hidden" id="postImageTags" name="postImageTags"/>
+    
     <div class="custom-file-container" data-upload-id="postImageUpload">
     <label style="display:none" class="custom-file-container__custom-file" >
       <input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose File" name="postImage" multiple>
       <input type="hidden" name="MAX_FILE_SIZE" value="10485760" />
       <span class="file-control"></span>
     </label>
-    <div class="image-preview"><a href="javascript:void(0)" class="image-clear" title="Clear Image"><i class="fas fa-times"></i></a></div>
     </div>
-    <input type="text" class="form-control mb-3" name="postImageDescription" id="postImageDescription" placeholder="Describe this image for people using screen readers." {{#if sessionFlash.errorImageDescription }}value="{{sessionFlash.errorImageDescription}}"{{/if}}/>
+    <div class="newimageform">
+      <div class="image-preview"><a href="javascript:void(0)" class="image-clear" title="Clear Image"><i class="fas fa-times"></i></a></div>
+      <textarea class="form-control mb-3" name="postImageDescription" id="postImageDescription" placeholder="Describe this image for people using screen readers." {{#if sessionFlash.errorImageDescription }}value="{{sessionFlash.errorImageDescription}}"{{/if}}></textarea>
+    </div>
   </div>
   <div class="form-row my-2 card p-1" id="emojiWindow" style="display:none">
     {{> emojilist }}
